<resources>
    <string name="app_name">HomeManager</string>
    <string name="facebook_app_id">291469567947342</string>
    <string name="title_activity_home_manager">HomeManager</string>
    <string name="action_settings">action_settings</string>
    <string name="logout">Logout</string>
    <string name="enter_email">Enter email</string>
    <string name="HomeText"></string>
    <string name="oppure">Oppure</string>
    <string name="crea_nuovo_gruppo">Crea un nuovo gruppo</string>
    <string name="entra_gruppo">Entra in un gruppo</string>
    <string name="insert_name">Inserisci il nome del gruppo</string>
    <string name="crea">Crea</string>
    <string name="annulla">Annulla</string>
    <string name="aggiungi_membro">Aggiungi un membro</string>
    <string name="title_activity_group_home">GroupHomeActivity</string>
    <string name="genera_qrcode">Genera QrCode</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scanQr_message">Scannerizza il QR code sul dispositivo del tuo nuovo coinquilino per accedere al suo gruppo !</string>
    <string name="calendar_image">calendar image</string>
    <string name="money">money</string>
    <string name="cleaning">cleaning</string>
    <string name="contacts">contacts</string>
    <string name="numeri_utili">Numeri Utili</string>
    <string name="lista_della_spesa">Lista della spesa</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="eventi_in_programma">Eventi in programma:</string>
    <string name="non_ci_sono_eventi_in_programma">Non ci sono eventi in programma</string>
    <string name="inserisci">Inserisci</string>
    <string name="descizione_dell_evento">Descizione dell\'evento</string>
    <string name="inserisci_la_data">Inserisci la data</string>
    <string name="orario">Orario</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="non_ci_sono_elementi_nella_vostra_lista">Non ci sono elementi nella vostra lista</string>
    <string name="chiudi">Chiudi</string>
    <string name="button_undo">Undo</string>
    <string name="aggiungi_un_elemento">Aggiungi un elemento</string>
    <string name="swipe_verso_sinistra_per_eliminare_un_elemento">Swipe verso sinistra per eliminare un elemento</string>
    <string name="title_activity_clean_round">CleanRoundActivity</string>
    <string name="turni_di_pulizie_per_questa_settimana">Turni di pulizie per questa settimana:</string>
    <string name="done">Done</string>
    <string name="fatto">Fatto</string>
    <string name="insert">insert</string>
    <string name="inserisci_un_compito">inserisci un compito</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="rubrica">Rubrica :</string>
    <string name="inserisci_nome">Inserisci nome</string>
    <string name="inserisci_numero">Inserisci numero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="walletactivity">WalletActivity</string>
    <string name="aggiungi_trasferimento">Aggiungi trasferimento</string>
    <string name="inserisci_l_importo">Inserisci l\'importo</string>
    <string name="seleziona_il_coinquilino_a_cui_hai_dato_dei_soldi">Seleziona il coinquilino a cui hai dato dei soldi</string>
    <string name="modifica_data">Modifica data</string>
    <string name="cosa_hai_comprato">Cosa hai comprato?</string>
    <string name="euro">€</string>
    <string name="descrizione_spesa">Descrizione spesa</string>
    <string name="modifica">Modifica</string>
    <string name="homemanager">HomeManager</string>
    <string name="qrcode">QrCode</string>
    <string name="phone">Phone</string>
    <string name="seleziona_un_orario">Seleziona un\'orario :</string>
    <string name="inserisci_una_nuova_spesa">Inserisci una nuova spesa</string>
    <string name="importo">Importo</string>
    <string name="elimina">Elimina</string>
    <string name="salda_i_tuoi_debiti">Salda i tuoi debiti</string>
    <string name="mic">mic</string>
</resources>
