<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".EventsActivity"
    >



    <EditText
        android:id="@+id/dialog_event_description"
        android:hint="@string/descizione_dell_evento"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text=""
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/dialog_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="date"
        android:text=""
        android:hint="@string/inserisci_la_data"
        android:layout_marginTop="25sp"
        android:layout_below="@+id/dialog_event_description"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/dialog_event_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="time"
        android:text=""
        android:hint="@string/orario"
        android:layout_marginTop="25sp"
        android:layout_below="@+id/dialog_event_description"
        android:layout_toEndOf="@id/dialog_event_date"
        android:layout_toRightOf="@id/dialog_event_date"
        />

    <Button
        android:id="@+id/annulla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chiudi"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/dialog_event_date"
        android:background="@color/zxing_viewfinder_laser"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserisci"
        android:layout_below="@+id/dialog_event_date"
        android:layout_toEndOf="@id/annulla"
        android:layout_toRightOf="@id/annulla"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/com_facebook_button_background_color_disabled"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />


</RelativeLayout>