<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="it.unitn.disi.homemanager.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/com_facebook_button_background_color_pressed"
        android:elevation="4dp"
        android:theme="@style/Theme.Design.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/HomeText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/HomeText"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/my_toolbar"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        style="@android:style/Widget.ProgressBar.Large"/>

    <EditText
        android:id="@+id/text_insert_group_name"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:hint="@string/insert_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/HomeText"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:id="@+id/crea_gruppo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crea_nuovo_gruppo"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/HomeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/oppure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/oppure"
        android:textSize="15sp"
        android:layout_below="@+id/crea_gruppo"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/entra_gruppo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/entra_gruppo"
        android:layout_below="@+id/oppure"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/annulla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/annulla"
        android:layout_below="@+id/text_insert_group_name"
        android:visibility="gone"
        android:background="#ff0000"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/crea_gruppo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crea"
        android:layout_below="@+id/annulla"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
