<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ContactsActivity">


    <EditText
        android:id="@+id/dialog_insert_name"
        android:hint="@string/inserisci_nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_insert_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="phone"
        android:text=""
        android:hint="@string/inserisci_numero"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/dialog_insert_name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/annulla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chiudi"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/dialog_insert_number"
        android:background="@color/zxing_viewfinder_laser"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />
    <Button
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserisci"
        android:layout_below="@+id/dialog_insert_number"
        android:layout_toEndOf="@id/annulla"
        android:layout_toRightOf="@id/annulla"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="#80ff80"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />


</RelativeLayout>